Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-10-20 (SVN):
    * oslibs/windows/scitech/include/mgraph.h: Commented out unnecessary
      includes of some C++ headers and removed the now unused mglrect.hpp
      and mglpoint.hpp.

2011-10-20 (SVN):
    * Added Steve's syntax checking patch, dating back from early 2009,
      among the optional patches.  I'd like get back to it some day..

2011-10-19 (SVN):
    * launcher: updated uhexen2 version to report 1.5.1
    * Updated README.dos document with relation to the CWSDPMI version
      included in the binary package.
    * quakedef.h: updated beta datestamp to 2011-10-19.

2011-10-19 (SVN):
    * Fixed the dos version's failure on computers with more than 2GB of
      memory. Works best with CWSDPMI r7. The issue was reported here:
      http://www.delorie.com/djgpp/mail-archives/browse.cgi?p=djgpp/2011/09/20/21:15:20
      Thanks go to Rugxulo for reporting the issue and testing the fix.
      Quoting him further: "With CWSDPMI r5 by default, it can't load the
      page tables (not enough low memory), but that's an old quirk due to
      him putting it all in low (conventional) memory because 4 kb pages
      for "big RAM" (greater than 512+ MB machines, IIRC) takes a lot of
      space."

2011-10-19 (SVN):
    * Fixed compilation with sound disabled.

2011-10-19 (SVN):
    * Xcode project file for Mac OS X: Updated from Steven.

2011-10-18 (SVN):
    * Updated the Visual Studio project files.
    * Made all projects to always use our own q_strlcpy and q_strlcat.
    * Made all projects to use q_(v)snprintf from libs/common.

2011-10-18 (SVN):
    * Removed mididef.h and moved midi driver init and shutdown procedure
      prototypes to bgmusic.h. Removed common include of cdaudio.h from
      quakedef.h, included it in places where necessary.

2011-10-18 (SVN):
    * Split docs/CHANGES, moved logs up to 1.4.3-release into CHANGES.old
    * Updated 1.5.1 release notes file.